@@ -101,7 +101,6 @@ ptw32_processTerminate (void)
       /* 
        * Destroy the global locks and other objects.
        */
-      DeleteCriticalSection (&ptw32_once_event_lock);
       DeleteCriticalSection (&ptw32_spinlock_test_init_lock);
       DeleteCriticalSection (&ptw32_rwlock_test_init_lock);
       DeleteCriticalSection (&ptw32_cond_test_init_lock);
