@@ -26,8 +26,8 @@ All tests passed.
 Some minor speed improvements were also done.
 
 * Fix integer overrun error in pthread_mutex_timedlock() - missed when
-sem_timedwait() was fixed in release 2.2.0. This rouitne no longer returns
-ENOSUP when NEED_SEM is defined - it is supported (NEED_SEM is only
+sem_timedwait() was fixed in release 2.2.0. This routine no longer returns
+ENOTSUP when NEED_SEM is defined - it is supported (NEED_SEM is only
 required for WinCE versions prior to 3.0).
 
 * Fix timeout bug in sem_timedwait().
@@ -61,7 +61,7 @@ Known issues in this release
 determine..
 
 * The Borland version of the dll fails some of the tests with a memory read
-exception. The cause is not yet known but a compiler bug has not been rules
+exception. The cause is not yet known but a compiler bug has not been ruled
 out.
 
 
